# cinnamon-desktop

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.pre-git  HACKING  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  config.h.in  config.h.meson.in  configure  configure.ac  gnome-version.xml.in.in  installer-test  makepot  meson.build  meson_options.txt
.bzr/branch/: branch.conf  last-revision  tags
.bzr/checkout/: dirstate
.bzr/repository/: pack-names
.circleci/: config.yml
.github/workflows/: stale.yaml
.pc/: applied-patches
data/: Makefile.am  cinnamon-desktop
debian/: changelog  cinnamon-desktop-data.install  cinnamon-desktop-data.lintian-overrides  cinnamon-desktop-data.maintscript  cinnamon-desktop-data.postinst  control  control.in  copyright  gir1.2-cinnamondesktop-3.0.install  gir1.2-cvc-1.0.install  gir1.2-gnomedesktop-3.0.install  gnome-desktop3-data.install  libcinnamon-desktop-dev.install  libcinnamon-desktop0.install  libcinnamon-desktop0.symbols  libcinnamon-desktop4.acc.in  libcinnamon-desktop4.install  libcinnamon-desktop4.symbols  libcvc-dev.install  libcvc0.install  libcvc0.symbols  not-installed  rules  watch
debian/patches/: 02_refuse_to_break_GL_compositors.patch  04_compute_average_color.patch  99_ltmain_as-needed.patch  series  tweak_color_computation.patch
debian/tests/: control  testsuite
desktop-docs/: Makefile.in
desktop-docs/fdl/: Makefile.am  (+1 more)
docs/: Makefile.in
files/: Makefile.am  meson.build
headers/: Makefile.am  cdesktop-enums.h
libcinnamon-desktop/: Makefile.am  Makefile.in  cdesktop-enums.h  cinnamon-desktop-uninstalled.pc.in  cinnamon-desktop.pc.in  cinnamon-rr-debug.c  default-input-sources.h  display-name.c  edid.h  gnome-bg-crossfade.c  gnome-bg-crossfade.h  gnome-bg-slide-show.c  gnome-bg-slide-show.h  gnome-bg.c  gnome-bg.h  gnome-desktop-thumbnail-script.c  gnome-desktop-thumbnail-script.h  gnome-desktop-thumbnail.c  gnome-desktop-thumbnail.h  gnome-desktop-utils.c  gnome-desktop-utils.h  gnome-gettext-portable.c  gnome-gettext-portable.h  gnome-idle-monitor.c  gnome-idle-monitor.h  gnome-installer.c  gnome-installer.h  gnome-languages.c  gnome-languages.h  gnome-pnp-ids.c  gnome-pnp-ids.h  gnome-rr-config.c  gnome-rr-config.h  gnome-rr-debug.c  gnome-rr-labeler.c  gnome-rr-labeler.h  gnome-rr-output-info.c  gnome-rr-private.h  gnome-rr.c  gnome-rr.h  (+15 more)
libcinnamon-desktop/libgsystem/: Makefile-libgsystem.am  gsystem-file-utils.c  gsystem-file-utils.h  gsystem-local-alloc.c  gsystem-local-alloc.h  libgsystem.h  meson.build
libcvc/: Makefile.am  cvc-uninstalled.pc.in  cvc.pc.in  gvc-channel-map-private.h  gvc-channel-map.c  gvc-channel-map.h  gvc-mixer-card-private.h  gvc-mixer-card.c  gvc-mixer-card.h  gvc-mixer-control-private.h  gvc-mixer-control.c  gvc-mixer-control.h  gvc-mixer-event-role.c  gvc-mixer-event-role.h  gvc-mixer-sink-input.c  gvc-mixer-sink-input.h  gvc-mixer-sink.c  gvc-mixer-sink.h  gvc-mixer-source-output.c  gvc-mixer-source-output.h  gvc-mixer-source.c  gvc-mixer-source.h  gvc-mixer-stream-private.h  gvc-mixer-stream.c  gvc-mixer-stream.h  gvc-mixer-ui-device.c  gvc-mixer-ui-device.h  gvc-pulseaudio-fake.h  libcvc.doap  libgnome-volume-control.doap  meson.build  test-audio-device-selection.c
libgnome-desktop/: Makefile.am  check_gl_texture_size.c  gnome-bg.c  gnome-datetime-source.c  gnome-datetime-source.h  gnome-desktop-3.0-uninstalled.pc.in  gnome-desktop-3.0.pc.in  gnome-desktop-thumbnail.c  gnome-desktop-thumbnail.h  gnome-pnp-ids.c  gnome-rr-config.c  gnome-rr-labeler.c  gnome-rr-output-info.c  gnome-rr.h  gnome-thumbnail-pixbuf-utils.c  gnome-wall-clock.c  gnome-xkb-info.c  gnome-xkb-info.h  pnp.ids  test-pnp-ids.c  test-wall-clock.c  test-xkb-info.c
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  fy.po  ga.po  (+76 more)
schemas/: Makefile.am  meson.build  org.cinnamon.desktop.a11y.applications.gschema.xml.in  org.cinnamon.desktop.a11y.applications.gschema.xml.in.in  org.cinnamon.desktop.a11y.keyboard.gschema.xml.in  org.cinnamon.desktop.a11y.keyboard.gschema.xml.in.in  org.cinnamon.desktop.a11y.magnifier.gschema.xml.in  org.cinnamon.desktop.a11y.magnifier.gschema.xml.in.in  org.cinnamon.desktop.a11y.mouse.gschema.xml.in  org.cinnamon.desktop.a11y.mouse.gschema.xml.in.in  org.cinnamon.desktop.background.gschema.xml.in  org.cinnamon.desktop.background.gschema.xml.in.in  org.cinnamon.desktop.default-applications.gschema.xml.in  org.cinnamon.desktop.default-applications.gschema.xml.in.in  org.cinnamon.desktop.input-sources.gschema.xml.in  org.cinnamon.desktop.input-sources.gschema.xml.in.in  org.cinnamon.desktop.interface.gschema.xml.in  org.cinnamon.desktop.interface.gschema.xml.in.in  org.cinnamon.desktop.keybindings.gschema.xml.in  org.cinnamon.desktop.keybindings.gschema.xml.in.in  org.cinnamon.desktop.keybindings.media-keys.gschema.xml.in  org.cinnamon.desktop.keybindings.media-keys.gschema.xml.in.in  org.cinnamon.desktop.keybindings.wm.gschema.xml.in  org.cinnamon.desktop.keybindings.wm.gschema.xml.in.in  org.cinnamon.desktop.lockdown.gschema.xml.in  org.cinnamon.desktop.lockdown.gschema.xml.in.in  org.cinnamon.desktop.media-handling.gschema.xml.in  org.cinnamon.desktop.media-handling.gschema.xml.in.in  org.cinnamon.desktop.notifications.gschema.xm.in.in  org.cinnamon.desktop.notifications.gschema.xml.in  org.cinnamon.desktop.notifications.gschema.xml.in.in  org.cinnamon.desktop.peripherals.gschema.xml.in  org.cinnamon.desktop.privacy.gschema.xml.in  org.cinnamon.desktop.privacy.gschema.xml.in.in  org.cinnamon.desktop.screensaver.gschema.xml.in  org.cinnamon.desktop.screensaver.gschema.xml.in.in  org.cinnamon.desktop.session.gschema.xml.in  org.cinnamon.desktop.session.gschema.xml.in.in  org.cinnamon.desktop.sound.gschema.xml.in  org.cinnamon.desktop.sound.gschema.xml.in.in  (+8 more)
(+153 files in other folders)
