option('deprecation_warnings', type: 'boolean', value: false,
       description: 'Show compiler warnings about deprecated features')
option('alsa', type: 'boolean', value: false,
       description: 'ALSA support')
option('systemd',
  type: 'feature', description: 'Systemd integration support'
)
option('bubblewrap',
  type: 'feature', value: 'auto',
  description: 'Run external thumbnailers inside a bubblewrap + seccomp sandbox'
)
